--- a/CD_Collection/Views/Home/Index.cshtml
+++ b/CD_Collection/Views/Home/Index.cshtml
@@ -2,8 +2,10 @@
     ViewData["Title"] = "Home Page";
 }
 
+
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-5 fw-bold">Welcome to the world of music</h1>
+    <p class="fw-light">On this website you can store information about artists and their albums</p>
+    <img class="w-75 h-auto" src="https://images.pexels.com/photos/13743685/pexels-photo-13743685.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Several compact discs on a white background" />
 </div>
 
