Update text and spacing

--- a/CD_Collection/Views/Album/Index.cshtml
+++ b/CD_Collection/Views/Album/Index.cshtml
@@ -1,13 +1,13 @@
 @model IEnumerable<CD_Collection.Models.Album>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Albums";
 }
 
-<h1>Index</h1>
+<h1>Albums</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Create new album</a>
 </p>
 <table class="table">
     <thead>
