--- a/CD_Collection/Views/Artist/Index.cshtml
+++ b/CD_Collection/Views/Artist/Index.cshtml
@@ -1,13 +1,13 @@
 @model IEnumerable<CD_Collection.Models.Artist>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Artists";
 }
 
-<h1>Index</h1>
+<h1>Artists</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Add new artist</a>
 </p>
 <table class="table">
     <thead>
